force-app/main/default/objects/custom_create272__c/custom_create272__c.object-meta.xml
<CustomObject>
    <label>Custom created object272</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects272</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>