force-app/main/default/objects/custom_create272__c/fields/custom_create_272field582__c.field-meta.xml
<CustomField>
    <fullName>custom_create_272field582__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 272field582</label>
    <type>Checkbox</type>
</CustomField>